--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge_property.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge_property.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
->
+<databaseChangeLog
+	xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
 
-    <changeSet id="2.0.0" author="hhildebrand">
-        <createView viewName="edge_properties" schemaName="readable" replaceIfExists="true"><![CDATA[
+	<changeSet id="2.0.0" author="hhildebrand">
+		<createView viewName="edge_property" schemaName="readable"
+			replaceIfExists="true"><![CDATA[
 			 SELECT 
                  p.id,
                  a.name AS auth,
@@ -19,7 +21,7 @@
                  wa.key AS wsp_key,
                  wa.description AS wsp_desc,
 			     p.version
-			   FROM edge_properties p
+			   FROM edge_property p
                  JOIN existential_network_authorization a ON p.auth = a.id
 			     JOIN existential_network n ON p.edge = n.id
                  JOIN existential parent ON n.parent = parent.id
@@ -30,5 +32,5 @@
                  LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = p.id
             ]]>
         </createView>
-    </changeSet>
+	</changeSet>
 </databaseChangeLog>
