--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/facet_property.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/facet_property.xml
@@ -13,7 +13,8 @@
                  p.id,
                  f.name AS facet,
                  e.name AS existential,
-                 jsonb_pretty(p.properties) AS properties, 
+                 jsonb_pretty(p.properties) AS properties,
+                 p.updated,
 			     up.name AS updated_by, 
                  w.name AS workspace,
                  wa.key AS wsp_key,
