--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/deductions.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/deductions.xml
@@ -22,7 +22,7 @@
                     wa.key AS wsp_key,
                     wa.description AS wsp_desc,
                     n.version
-			   FROM existential_network n
+			   FROM edge n
 			   JOIN existential p ON n.parent = p.id
 			   JOIN existential rel ON n.relationship = rel.id
 			   JOIN existential c ON n.child = c.id
