--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge.xml
@@ -6,7 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView viewName="existential_network" schemaName="readable" replaceIfExists="true"><![CDATA[
+        <createView viewName="edge" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                     p.name AS parent,
                     rel.name AS relationship, 
@@ -19,7 +19,7 @@
                     wa.key AS wsp_key,
                     wa.description AS wsp_desc,
                     n.version
-			   FROM existential_network n
+			   FROM edge n
 			   JOIN existential p ON n.parent = p.id
 			   JOIN existential rel ON n.relationship = rel.id
 			   JOIN existential c ON n.child = c.id
