--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/edge_authorization.xml
@@ -33,8 +33,8 @@
                 left join existential authorized_parent on child.classification = authorized_parent.id
                 left join existential authorized_rel on child.classifier = authorized_rel.id
                 left join existential res on auth.authority = res.id
-             LEFT JOIN existential w ON auth.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = auth.id
+             LEFT JOIN workspace_label wa ON wa.reference = auth.id
+             LEFT JOIN existential w ON wa.workspace = w.id
             ]]>
         </createView>
     </changeSet>
