--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
@@ -19,8 +19,8 @@
                 r.version
 			   FROM existential r
 			   JOIN existential up ON r.updated_by = up.id
-             LEFT JOIN existential w ON r.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = r.id
+             LEFT JOIN workspace_label wa ON wa.reference = r.id
+             LEFT JOIN existential w ON wa.workspace = w.id
                WHERE r.domain = 'Interval'
             ]]>
         </createView>
