--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
@@ -27,7 +27,6 @@
                 cat.name AS child_assign_to,
                 cdf.name AS child_deliver_from, 
                 cdt.name AS child_deliver_to,
-                base_table.sequence_number,
                 base_table.notes,
                 up.name AS updated_by,
                 w.name AS workspace,
@@ -51,8 +50,8 @@
                JOIN existential cdt ON base_table.child_deliver_to = cdt.id
                JOIN existential cdf ON base_table.child_deliver_from = cdf.id
                JOIN existential up ON base_table.updated_by = up.id
-               LEFT JOIN existential w ON base_table.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
+             LEFT JOIN workspace_label wa ON wa.reference = base_table.id
+               LEFT JOIN existential w ON wa.workspace = w.id
             ]]>
         </createView>
     </changeSet>
