--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
@@ -19,8 +19,8 @@
 			     b.version
 			   FROM existential b
 			   JOIN existential up ON b.updated_by = up.id
-             LEFT JOIN existential w ON b.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = b.id
+             LEFT JOIN workspace_label wa ON wa.reference = b.id
+             LEFT JOIN existential w ON wa.workspace = w.id
                WHERE b.domain = 'Unit'
             ]]>
         </createView>
